# pgm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
PGM/: CMakeLists.txt
PGM/Application/: Application.cpp  Application.h  ApplicationSystem.h  ApplicationSystemStack.h  CMakeLists.txt
PGM/Application/GUI/: GUISystem.cpp  GUISystem.h
PGM/Core/: CMakeLists.txt
PGM/Core/Assert/: Assert.h
PGM/Core/Color/: Color.h
PGM/Core/Events/: EventDispatcher.cpp  EventDispatcher.h
PGM/Core/Logging/: Logger.h
PGM/Core/Matrix/: Matrix.h
PGM/Core/Rect/: Rect.h
PGM/Core/Ref/: Ref.h
PGM/Core/Time/: Time.h
PGM/Core/Vec/: Vec.h
PGM/ECS/: CMakeLists.txt  ecs.cpp
PGM/ECS/Components/: CameraComponent.h  Components.h  MeshRendererComponent.h  MetadataComponent.h  TagComponent.h  TransformComponent.h
PGM/ECS/Entity/: EntityRef.h
PGM/ECS/Scene/: Scene.cpp  Scene.h
PGM/GUI/: CMakeLists.txt  GUI.cpp  GUI.h
PGM/Platform/: CMakeLists.txt
PGM/Platform/Input/: Keyboard.h  Mouse.h
PGM/Platform/Input/Win32/: Keyboard.cpp  Mouse.cpp
PGM/Platform/Strings/: Strings.h
PGM/Platform/Strings/Win32/: Strings.cpp
PGM/Platform/Window/: Window.h
PGM/Platform/Window/Events/: WindowEvents.h
PGM/Platform/Window/Win32/: Window.cpp  WindowImpl.h
PGM/Renderer/: CMakeLists.txt  RenderContext.h  Renderer.h
PGM/Renderer/API/: Backends.h  Commands.h  RenderContext.h  RendererCommands.h
PGM/Renderer/API/Backend/OpenGL/: GlCheck.h  OpenGlCommands.cpp  OpenGlCommands.h  OpenGlRenderContext.h
PGM/Renderer/API/Backend/OpenGL/Buffers/: GpuBufferTraits.h  VertexArrayImpl.cpp  VertexArrayImpl.h
PGM/Renderer/API/Backend/OpenGL/Shaders/: OpenGlShader.cpp  OpenGlShader.h
PGM/Renderer/API/Backend/OpenGL/Textures/: OpenGlTexture2d.cpp  OpenGlTexture2d.h
PGM/Renderer/API/Backend/OpenGL/Win32/: OpenGlRenderContext.cpp
PGM/Renderer/API/Buffers/: GpuBuffer.h  VertexArray.cpp  VertexArray.h
PGM/Renderer/API/Shaders/: Shader.h
PGM/Renderer/API/Textures/: Texture2d.h
PGM/Renderer/Batches/: StaticBatch.h
PGM/Renderer/Camera/: Camera.h
PGM/Renderer/Mesh/: Mesh.h
PGM/Renderer/Platform/Window/: Window.h
PGM/Renderer/Platform/Window/Win32/: Window.cpp
PGM/Renderer/Primitives/: Cube.h
renderer/: CMakeLists.txt
renderer/logging/: Logger.h
renderer/platform/strings/: Strings.h
renderer/platform/strings/win32/: Strings.cpp
renderer/platform/window/: Window.h
renderer/platform/window/win32/: Window.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp  win32_main.cpp
